--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "art_lyf",
   "version": "1.0.0",
+  "engines" : {
+    "node" : "6.3.1",
+    "npm" : "3.10.3"},
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+   "start" : "node index.js"
   },
   "repository": {
     "type": "git",
