--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "art_lyf",
   "version": "1.0.0",
-  "engines" : {
-    "node" : "6.3.1",
-    "npm" : "3.10.3"},
+  "engines": {
+    "node": "6.3.1",
+    "npm": "3.10.3"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   "start" : "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "dependencies": {
     "bower": "^1.8.4",
     "express": "^4.16.4",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "npm": "^6.5.0"
   }
 }
