--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Oyamasiphula/art_lyf#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bower": "^1.8.4",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
