--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "nodemailer": "^5.0.0",
-    "npm": "^6.5.0"
+    "npm": "^6.5.0",
+    "babel-cli": "^6.18.0",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-polyfill": "^6.20.0"
   }
 }
