--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bower": "^1.8.4",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "multer": "^1.4.1",
     "nodemailer": "^5.0.0",
     "npm": "^6.5.0"
   }
