--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "art_lyf",
   "version": "1.0.0",
   "engines": {
-    "node": "6.3.1",
-    "npm": "3.10.3"
+    "node": "10.3.0",
+    "npm": "6.x"
   },
   "description": "",
   "main": "index.js",
